fix: adjusting z-index of footer in in view to overlay header

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,7 +128,7 @@ body {
 
 @utility layout__main {
     position: relative;
-    z-index: 30;
+    z-index: 40;
     margin-top: var(--header-height);
     margin-bottom: var(--footer-height);
     width: 100%;
